@@ -1,3 +1,6 @@
+Fri Dec 29 20:43:55 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/mem.c: remove warning and optimize
+
 Fri Dec 29 20:42:41 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/apps/tsql.c: remove warnings
 
